[package]
name = "apprentice"
version = "0.1.0"
authors = ["Tyler Vipond <tylervipond@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "apprentice_lib"
path = "src/lib.rs"

[[bin]]
name = "apprentice"
path = "src/main.rs"

[profile.release]
lto = true
debug = true

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.15.0", features = ["serde"] }
specs-derive = "0.4.0"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = "0.2.72"
stamp-rs = { git= "https://github.com/tylervipond/stamp-rs", version= "0.4.6", features = ["serde"] }
ron = "*"
winit = { version = "0.22.0", features=["web-sys", "serde"]}
futures = "0.3"
wasm-bindgen-futures = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.13.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Storage',
  'HtmlAudioElement',
  'HtmlMediaElement',
]